[gd_scene load_steps=14 format=3 uid="uid://cxg2rd6ljotc5"]

[ext_resource type="Script" path="res://core/sp.gd" id="1_i3kni"]
[ext_resource type="Script" path="res://core/ui_sp.gd" id="1_tsa20"]
[ext_resource type="Script" path="res://core/world_sp.gd" id="3_6pipj"]
[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_map.gd" id="4_5f6rt"]
[ext_resource type="Resource" uid="uid://bvp7y10gkqixm" path="res://trenchbroom/sp_toonbox_fgd.tres" id="4_n5q3i"]
[ext_resource type="Texture2D" uid="uid://0yo2od878bfq" path="res://assets/textures/backdrop.png" id="5_76t2w"]
[ext_resource type="FontFile" uid="uid://bevdxpypkmjw5" path="res://assets/fonts/fredoka_one.ttf" id="6_7henw"]
[ext_resource type="PackedScene" uid="uid://du621tdl15o4v" path="res://core/new_room.tscn" id="7_da63q"]
[ext_resource type="PackedScene" uid="uid://gld5ww40xaln" path="res://core/settings_dialog.tscn" id="10_7btxg"]
[ext_resource type="AudioStream" uid="uid://ddrwdmru5rf72" path="res://assets/audio/music/Blown Away.mp3" id="10_gcvsi"]

[sub_resource type="NavigationMesh" id="NavigationMesh_pypmj"]
cell_height = 0.01
agent_max_climb = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j22il"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n63q7"]
bg_color = Color(0, 0, 0, 0.607843)

[node name="Main" type="Node"]
script = ExtResource("1_i3kni")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsa20")

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="WorldViewport" type="SubViewport" parent="UI/SubViewportContainer"]
handle_input_locally = false
mesh_lod_threshold = 0.0
audio_listener_enable_3d = true
physics_object_picking = true
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="World3D" type="Node3D" parent="UI/SubViewportContainer/WorldViewport"]
script = ExtResource("3_6pipj")
main_node_path = NodePath("../../../..")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="UI/SubViewportContainer/WorldViewport/World3D"]
_spawnable_scenes = PackedStringArray("res://actors/player.tscn", "res://core/map_holder.tscn")
spawn_path = NodePath("..")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="UI/SubViewportContainer/WorldViewport/World3D"]
navigation_mesh = SubResource("NavigationMesh_pypmj")

[node name="QodotMap" type="Node3D" parent="UI/SubViewportContainer/WorldViewport/World3D/NavigationRegion3D"]
script = ExtResource("4_5f6rt")
map_file = "C:/sunaba/maps/test.map"
inverse_scale_factor = 16.0
entity_fgd = ExtResource("4_n5q3i")
base_texture_dir = "res://textures"
texture_file_extensions = PackedStringArray("png", "jpg")
worldspawn_layers = []
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = []
material_file_extension = "tres"
unshaded = false
default_material_albedo_uniform = ""
default_material = SubResource("StandardMaterial3D_j22il")
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = false
tree_attach_batch_size = null
set_owner_batch_size = 1000

[node name="RespawnTimer" type="Timer" parent="UI/SubViewportContainer/WorldViewport/World3D"]
wait_time = 5.0
one_shot = true

[node name="PauseMenu" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n63q7")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
offset_left = 23.0
offset_top = 24.0
offset_right = 173.0
offset_bottom = 160.0
alignment = 2

[node name="Button4" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Resume Game"
flat = true
alignment = 0

[node name="Button1" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Exit Map"
flat = true
alignment = 0

[node name="Button2" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Settings"
flat = true
alignment = 0

[node name="Button3" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Quit"
flat = true
alignment = 0

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_76t2w")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -197.0
offset_right = 213.0
offset_bottom = -69.0
grow_vertical = 0
alignment = 2

[node name="Button4" type="Button" parent="UI/MainMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "New Game"
flat = true
alignment = 0

[node name="Button1" type="Button" parent="UI/MainMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Connect"
flat = true
alignment = 0

[node name="Button2" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Settings"
flat = true
alignment = 0

[node name="Button3" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Quit"
flat = true
alignment = 0

[node name="Logo" type="Label" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -62.0
offset_right = 199.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_7henw")
theme_override_font_sizes/font_size = 30
text = "sunaba"

[node name="NewRoomDialog" type="Window" parent="UI"]
title = "New Room"
size = Vector2i(435, 289)
visible = false
extend_to_title = true
min_size = Vector2i(435, 289)
max_size = Vector2i(435, 289)

[node name="NewRoom" parent="UI/NewRoomDialog" instance=ExtResource("7_da63q")]

[node name="RoomName" parent="UI/NewRoomDialog/NewRoom" index="0"]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 31.0

[node name="MapPath" parent="UI/NewRoomDialog/NewRoom" index="1"]
layout_mode = 1

[node name="Button" parent="UI/NewRoomDialog/NewRoom/MapPath" index="0"]
layout_mode = 1

[node name="CreateRoomButton" parent="UI/NewRoomDialog/NewRoom" index="2"]
layout_mode = 1

[node name="FileDialog" type="FileDialog" parent="UI"]
initial_position = 1
title = "Open a File"
size = Vector2i(335, 300)
min_size = Vector2i(335, 300)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.map")
show_hidden_files = true

[node name="SettingsDialog" parent="UI" instance=ExtResource("10_7btxg")]
initial_position = 1
title = "Settings"
visible = false
gui = NodePath("..")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_gcvsi")

[connection signal="build_complete" from="UI/SubViewportContainer/WorldViewport/World3D/NavigationRegion3D/QodotMap" to="UI/SubViewportContainer/WorldViewport/World3D" method="_on_qodot_map_build_complete" flags=18]
[connection signal="timeout" from="UI/SubViewportContainer/WorldViewport/World3D/RespawnTimer" to="UI/SubViewportContainer/WorldViewport/World3D" method="_on_respawn_timer_timeout" flags=18]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Button4" to="UI" method="unpause"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Button1" to="." method="reload"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Button2" to="UI" method="_on_sb_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Button3" to="." method="quit"]
[connection signal="close_requested" from="UI/NewRoomDialog" to="UI" method="_on_new_room_dialog_close_requested"]
[connection signal="mouse_entered" from="UI/NewRoomDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_entered"]
[connection signal="mouse_exited" from="UI/NewRoomDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_exited"]
[connection signal="pressed" from="UI/NewRoomDialog/NewRoom/MapPath/Button" to="UI" method="_on_file_button_pressed"]
[connection signal="pressed" from="UI/NewRoomDialog/NewRoom/CreateRoomButton" to="." method="create_room"]
[connection signal="close_requested" from="UI/FileDialog" to="UI" method="_on_file_dialog_close_requested"]
[connection signal="file_selected" from="UI/FileDialog" to="." method="_on_map_file_selected"]
[connection signal="mouse_entered" from="UI/SettingsDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_entered"]
[connection signal="mouse_exited" from="UI/SettingsDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_exited"]

[editable path="UI/NewRoomDialog/NewRoom"]
